# workflow-runner

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/workflows/: demo_workflow.py  deploy.yaml  health_check.json  system_check.yaml
src/workflow_runner/: __init__.py  __main__.py  logging_utils.py
src/workflow_runner/cli/: __init__.py  app.py  console.py  repl.py
src/workflow_runner/connection/: __init__.py  base.py  local.py  manager.py  ssh.py
src/workflow_runner/debugger/: __init__.py  stepper.py
src/workflow_runner/execution/: __init__.py  executor.py  result.py
src/workflow_runner/security/: __init__.py  guard.py
src/workflow_runner/workflow/: __init__.py  engine.py  loader.py  model.py
tests/: conftest.py  test_executor.py  test_logging_utils.py  test_security_guard.py  test_session_manager.py  test_workflow_engine.py  test_workflow_loader.py  test_workflow_models.py
workflow_runner/: __init__.py  logger.py  main.py
workflow_runner/cli/: __init__.py  formatter.py  interface.py  repl.py
workflow_runner/connection/: __init__.py  manager.py  session.py
workflow_runner/executor/: __init__.py  command.py  result.py
workflow_runner/workflow/: __init__.py  engine.py  loader.py  models.py
workflows/: deploy.json  example.yaml
