[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-runner"
version = "0.1.0"
description = "Interactive remote command execution and workflow runner for Linux machines."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "workflow-runner contributors" }]
keywords = ["ssh", "remote", "workflow", "devops", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "paramiko>=3.3",
    "PyYAML>=6.0",
    "prompt_toolkit>=3.0.39",
    "rich>=13.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.0",
]

[project.scripts]
workflow-runner = "workflow_runner.cli.app:main"
wfr = "workflow_runner.cli.app:main"

[project.urls]
Homepage = "https://github.com/psanodiya94/workflow-runner"
Issues = "https://github.com/psanodiya94/workflow-runner/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
workflow_runner = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "UP007"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
